background-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyverno-background-controller-metrics
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: metrics-port
