background-controller/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kyverno-background-controller
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - {}
